# LaziX

./: .gitignore  CMakeLists.txt  README.md
lazix/include/lazix/: lazix.h
lazix/src/: lazix.cpp
sandbox/src/: main.cpp
